--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -94,14 +94,14 @@
   --vp-home-hero-name-color: transparent;
   --vp-home-hero-name-background: -webkit-linear-gradient(
     120deg,
-    #4dfa98 30%,
-    #3ebe1b
+    #4dfa98 50%,
+    #55f62a
   );
 
   --vp-home-hero-image-background-image: linear-gradient(
     -45deg,
-    #bd34fe 50%,
-    #47caff 50%
+    #4dfa9880 50%,
+    #55f62a80 50%
   );
   --vp-home-hero-image-filter: blur(44px);
 }
