--- a/src/templates/cypress-spec.mustache
+++ b/src/templates/cypress-spec.mustache
@@ -5,7 +5,10 @@ const selectorTree = `
 {{{selectorTree}}}
 `;
 
-const testRunner = new CypressRunner(selectorTree, {{#pathToExternals}}externals{{/pathToExternals}}{{^pathToExternals}}{}{{/pathToExternals}});
+const env = {{#env}}`
+{{{.}}}`;{{/env}}{{^env}}''{{/env}};
+
+const testRunner = new CypressRunner(selectorTree, {{#pathToExternals}}externals{{/pathToExternals}}{{^pathToExternals}}{}{{/pathToExternals}}, env);
 
 {{#blocks}}
 testRunner.add(`
