--- a/src/templates/playwright-spec.mustache
+++ b/src/templates/playwright-spec.mustache
@@ -6,7 +6,10 @@ const selectorTree = `
 {{{selectorTree}}}
 `;
 
-const testRunner = new PlaywrightRunner(selectorTree, {{#pathToExternals}}externals{{/pathToExternals}}{{^pathToExternals}}{}{{/pathToExternals}});
+const env = {{#env}}`
+{{{.}}}`;{{/env}}{{^env}}''{{/env}};
+
+const testRunner = new PlaywrightRunner(selectorTree, {{#pathToExternals}}externals{{/pathToExternals}}{{^pathToExternals}}{}{{/pathToExternals}}, env);
 
 {{#blocks}}
 testRunner.add(`
