--- a/src/templates/playwright-spec.mustache
+++ b/src/templates/playwright-spec.mustache
@@ -7,7 +7,7 @@ const selectorTree = `
 `;
 
 const env = {{#env}}`
-{{{.}}}`;{{/env}}{{^env}}''{{/env}};
+{{{.}}}`{{/env}}{{^env}}''{{/env}};
 
 const testRunner = new PlaywrightRunner(selectorTree, {{#pathToExternals}}externals{{/pathToExternals}}{{^pathToExternals}}{}{{/pathToExternals}}, env);
 
