--- a/src/templates/cypress-spec.mustache
+++ b/src/templates/cypress-spec.mustache
@@ -6,7 +6,7 @@ const selectorTree = `
 `;
 
 const env = {{#env}}`
-{{{.}}}`;{{/env}}{{^env}}''{{/env}};
+{{{.}}}`{{/env}}{{^env}}''{{/env}};
 
 const testRunner = new CypressRunner(selectorTree, {{#pathToExternals}}externals{{/pathToExternals}}{{^pathToExternals}}{}{{/pathToExternals}}, env);
 
