Add minimal example and fix runner imports

--- a/packages/generator/src/templates/cypress-spec.mustache
+++ b/packages/generator/src/templates/cypress-spec.mustache
@@ -1,4 +1,4 @@
-import { CypressRunner } from '@documente/documente';{{#pathToExternals}}
+import { CypressRunner } from '@documente/cypress-runner';{{#pathToExternals}}
 import externals from '{{{.}}}';{{/pathToExternals}}
 
 const selectorTree = `
