--- a/packages/generator/src/templates/playwright-spec.mustache
+++ b/packages/generator/src/templates/playwright-spec.mustache
@@ -1,6 +1,6 @@
-import { expect, test } from '@playwright/test';
-import { PlaywrightRunner } from '@documente/runner-playwright';{{#pathToExternals}}
-import externals from '{{{.}}}';{{/pathToExternals}}
+{{#importWhat}}{ expect, test }{{/importWhat}}{{#importFrom}}@playwright/test{{/importFrom}};
+{{#importWhat}}{ PlaywrightRunner }{{/importWhat}}{{#importFrom}}@documente/runner-playwright{{/importFrom}};{{#pathToExternals}}
+{{#importWhat}}externals{{/importWhat}}{{#importFrom}}{{{pathToExternals}}}{{/importFrom}};{{/pathToExternals}}
 
 const selectorTree = `
 {{{selectorTree}}}
