--- a/packages/generator/src/templates/cypress-spec.mustache
+++ b/packages/generator/src/templates/cypress-spec.mustache
@@ -1,5 +1,5 @@
-{{#importWhat}}{ CypressRunner }{{/importWhat}}{{#importFrom}}@documente/runner-cypress{{/importFrom}};{{#pathToExternals}}
-{{#importWhat}}externals{{/importWhat}}{{#importFrom}}{{{pathToExternals}}}{{/importFrom}};{{/pathToExternals}}
+import { CypressRunner } from '@documente/runner-cypress';{{#pathToExternals}}
+import externals from '{{{.}}}';{{/pathToExternals}}
 
 const selectorTree = `
 {{{selectorTree}}}
